--- a/stats-glow-mind/src/app/components/stats/standings/standings.component.html
+++ b/stats-glow-mind/src/app/components/stats/standings/standings.component.html
@@ -1,6 +1,11 @@
 <div class="standings">
   <div class="conference-table">
-    <h2>Conferencia Este</h2>
+    <div class="title-table">
+      <h2>Conferencia Este</h2>
+      <button mat-icon-button color="accent" (click)="routeGlossary()" matTooltip="Glosario">
+        <mat-icon>info</mat-icon>
+      </button>
+    </div>
     <div class="table-container">
       <table>
         <thead>
@@ -49,7 +54,12 @@
     </div>
   </div>
   <div class="conference-table">
-    <h2>Conferencia Oeste</h2>
+    <div class="title-table">
+      <h2>Conferencia Oeste</h2>
+      <button mat-icon-button color="accent" (click)="routeGlossary()" matTooltip="Glosario">
+        <mat-icon>info</mat-icon>
+      </button>
+    </div>
     <div class="table-container">
       <table>
         <thead>
