--- a/stats-glow-mind/src/app/components/teams/team-stats/team-stats.component.html
+++ b/stats-glow-mind/src/app/components/teams/team-stats/team-stats.component.html
@@ -14,6 +14,9 @@
     <div class="all-stats">
       <div class="name-stats">
         <h2>Estadísticas Totales</h2>
+        <button mat-icon-button color="accent" (click)="routeGlossary()" matTooltip="Glosario">
+          <mat-icon>info</mat-icon>
+        </button>
       </div>
       <table class="table">
         <thead>
