--- a/stats-glow-mind/src/app/components/about/about.component.html
+++ b/stats-glow-mind/src/app/components/about/about.component.html
@@ -1,1 +1,60 @@
-<p>about works!</p>
+<div class="wrapper">
+    <div class="about">
+        <div class="title">
+            <h1>¿Qué es StatsGlowMind?</h1>
+        </div>
+        <div class="info">
+            <p>
+                StatsGlowMind es una aplicación web dedicada a la Asociación Nacional de Baloncesto (<a href="https://www.nba.com/stats">NBA</a>), 
+                una plataforma que va más allá de la simple exhibición de estadísticas y resultados, para
+                ofrecer una serie de funcionalidades diseñadas para informar, analizar y predecir.
+                <br><br>
+                Esta aplicación proporciona información en tiempo real de la NBA, asi como la clasificación de la temporada, 
+                el cuadro de los playoffs, el calendario con los partidos y sus resultados, los líderes de la liga
+                dependiendo de la categoria deseada y estadísticas de los todos los equipos y jugadores de la NBA. Se pueden
+                observar los términos de baloncesto empleados en la aplicación en el <a href="#about" routerLink="/about/glossary">Glosario</a>.
+                <br><br>
+                StatsGlowMind tiene la capacidad de proporcionar análisis de jugadores en tiempo real, 
+                aprovechando las estadísticas de los juagdores en cada partido de la temporada, realizando así
+                gráficas de análisis que muestran el rendimiento de los jugadores durante la temporada de la liga.
+                <br><br>
+                Además, esta aplicación va más allá, al ofrecer predicciones sobre los resultados de los partidos futuros 
+                que puede seleccionar el usuaro. Integrando un modelo con el algoritmo Random Forest de Machine Learning 
+                entrenado con datos históricos de la temporada actual, la aplicación proporciona a los usuarios la probabilidad 
+                de victoria de cada equipo, agregando más interés y emoción al seguimiento de la temporada de la NBA.
+            </p>
+        </div>
+        <div class="title">
+            <h3>Desarrollo</h3>
+        </div>
+        <div class="info">
+            <p>
+                Este proyecto esta desarrollado en <a href="https://angular.io/docs">Angular</a> mediante TypeScript, HTML y CSS; 
+                utiliza la herramienta de <a href="https://firebase.google.com/docs">Firebase</a> como plataforma de alojamiento para la 
+                base de datos, almacenamiento de archivos, autentificación de usuarios, desarrollo backend mediante funciones (Python) 
+                en la nube y realiza el servicio de hosting. Y para mostrar información en tiempo real se ha usado la API "API-NBA" 
+                obtenida en la plataforma <a href="https://rapidapi.com/api-sports/api/api-nba">RapidAPI</a>.
+            </p>
+        </div>
+        <div class="title">
+            <h3>Diseño</h3>
+        </div>
+        <div class="info">
+            <p>
+                Para el diseño de la aplicación web se ha utilizado: <a href="https://getbootstrap.com/">Bootstrap</a> que proporciona un 
+                diseño responsive, <a href="https://material.angular.io/">Angular Material</a> que permite visualizar la aplicación más 
+                atractiva y <a href="https://www.flaticon.es/">Flaticon</a> donde he recogido los iconos de la interfaz.
+            </p>
+        </div>
+        <div class="title">
+            <h3>Redes Sociales</h3>
+        </div>
+        <div class="info">
+            <p>
+                Se puede acceder al repositorio del proyecto en <a href="https://github.com/roberlastrass/StatsGlowMind">GitHub</a>, donde se observa la estructura, el código y 
+                la documentación empleada para el proyecto. En <a href="https://www.linkedin.com/in/roberto-lastras-santos-082563216/">LinkedIn</a> es donde publico mi perfil 
+                profesional y logros adquiridos. También puedes contactar conmigo desde <a href="mailto:rls1004@alu.ubu.es">Outlook</a> para cualquier consulta o colaboración profesional.
+            </p>
+        </div>
+    </div>
+</div>
