--- a/stats-glow-mind/src/app/components/footer/footer.component.css
+++ b/stats-glow-mind/src/app/components/footer/footer.component.css
@@ -2,7 +2,7 @@
 .footer {
     background-color: #002649;
     color: white;
-    padding: 2.5% 0;
+    padding: 2.5% 0 0.5% 0;
     text-align: center;
     align-items: center;
     justify-content: center;
@@ -17,10 +17,19 @@
     margin: 3.5%;
 }
 .container-licence {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     margin-top: 2.5%;
+}
+.licence {
+    margin-left: 3.5%;
 }
 .container {
     flex: 1;
+}
+.icon {
+    width: 8%;
 }
 
 /* Estilos listas */
@@ -49,16 +58,30 @@ hr {
     height: auto;
 }
 
+/* Estilos para el select */
+.select-language {
+    margin-right: 3.5%;
+}
+mat-label {
+    color: #FE5B3B;
+}
+
 /* Media query para pantallas 1000px */
 @media only screen and (max-width: 1000px) {
     .footer {
-        font-size: 14px;
+        font-size: 12px;
     }
     h4 {
-        font-size: 16px;
+        font-size: 14px;
     }
     .title {
         max-width: 30%;
+    }
+    .select {
+        width: 60%;
+    }
+    .icon {
+        width: 10%;
     }
 }
 /* Media query para pantallas 600px */
@@ -70,9 +93,23 @@ hr {
         margin: 1% 7% 1% 7%;
     }
     .container-licence {
-        font-size: 12px;
+        font-size: 10px;
+    }
+    .licence {
+        width: 60%;
     }
     .title {
         max-width: 40%;
+    }
+    .select-language {
+        width: 55%;
+        padding-left: 10%;
+        font-size: 10px;
+    }
+    .select, mat-select, mat-option {
+        font-size: 10px;
+    }
+    .icon {
+        width: 12%;
     }
 }
