--- a/stats-glow-mind/src/app/components/stats/standings/standings.component.css
+++ b/stats-glow-mind/src/app/components/stats/standings/standings.component.css
@@ -22,6 +22,20 @@ h2 {
 }
 
 /* Estilos tabla */
+.title-table {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+}
+.title-table h2 {
+  flex: 1;
+  text-align: center;
+}
+.title-table button {
+  position: absolute;
+  right: 0;
+}
 table {
   margin-top: 5%;
   font-size: 16px;
