--- a/stats-glow-mind/src/app/components/register/register.component.html
+++ b/stats-glow-mind/src/app/components/register/register.component.html
@@ -38,7 +38,7 @@
                 <mat-form-field class="select">
                     <mat-select class="text-center" formControlName="rol" id="rol">
                         <mat-option value="user">Usuario</mat-option>
-                        <mat-option value="admin">Administrador</mat-option>
+                        <mat-option value="admin" disabled="disabled">Administrador</mat-option>
                     </mat-select>
                 </mat-form-field>
             </div>
